<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisplayItemActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin">

        <TextView
            android:id="@+id/selected_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textColor="@color/orange_dark"
            android:textSize="@dimen/textSize32"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/selected_item_ingredients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/selected_item_name"
            android:layout_centerHorizontal="true"
            android:padding="@dimen/padding"
            android:textColor="@color/black"
            android:textSize="@dimen/textSize16" />

        <TextView
            android:id="@+id/selected_item_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/selected_item_ingredients"
            android:layout_centerHorizontal="true"
            android:textColor="@color/black"
            android:textSize="@dimen/textSize18"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/btn_add_to_favorites"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_below="@+id/selected_item_price"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/margin8"
            android:backgroundTint="@color/orange_dark"
            android:contentDescription="@string/add_to_favorites_text"
            android:src="@drawable/ic_add_to_favorite" />

        <LinearLayout
            android:id="@+id/extra_toppings_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_add_to_favorites"
            android:layout_margin="@dimen/margin"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/toppings"
                android:textAllCaps="true"
                android:textSize="@dimen/textSize18"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/check_additional_pepperoni"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pepperoni" />

            <CheckBox
                android:id="@+id/check_additional_bacon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bacon" />

            <CheckBox
                android:id="@+id/check_additional_mozzarella"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mozzarella" />

            <CheckBox
                android:id="@+id/check_additional_mushrooms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mushrooms" />

            <CheckBox
                android:id="@+id/check_additional_onions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/onions" />

        </LinearLayout>

        <TextView
            android:id="@+id/quantity_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/extra_toppings_container"
            android:layout_marginStart="@dimen/margin"
            android:text="@string/quantity"
            android:textAllCaps="true"
            android:textSize="@dimen/textSize18"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/quantity_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/quantity_text"
            android:layout_marginStart="@dimen/margin"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_decrement"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/remove"
                android:textStyle="bold"
                android:backgroundTint="@color/orange_dark"/>

            <TextView
                android:id="@+id/display_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding"
                android:text="@string/_1"
                android:textSize="@dimen/textSize18"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_increment"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:textStyle="bold"
                android:backgroundTint="@color/orange_dark"/>

        </LinearLayout>


        <ImageButton
            android:id="@+id/btn_add_to_cart"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_below="@+id/quantity_container"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/margin"
            android:backgroundTint="@color/orange_dark"
            android:contentDescription="@string/add_to_cart_text"
            android:src="@drawable/ic_add_to_cart" />


    </RelativeLayout>

</ScrollView>