<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountDetailsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/add_details_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            android:text="@string/add_details_headline"
            android:textColor="@color/orange_dark"
            android:textSize="@dimen/textSize32"
            android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_details_header"
        android:orientation="vertical"
        android:layout_margin="@dimen/margin">

        <EditText
            android:id="@+id/first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/margin8"
            android:autofillHints="name"
            android:hint="@string/enter_your_first_name"
            android:textColorHint="@color/gray"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/margin8"
            android:autofillHints="name"
            android:hint="@string/enter_your_last_name"
            android:textColorHint="@color/gray"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/margin8"
            android:autofillHints="postalAddress"
            android:hint="@string/enter_your_address"
            android:textColorHint="@color/gray"
            android:inputType="textPostalAddress"
            android:minHeight="48dp" />

        <Spinner
            android:id="@+id/city_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin8"/>

        <TextView
            android:id="@+id/city_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/margin8"/>

        <ImageButton
            android:id="@+id/btn_confirm_account_details"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_margin="@dimen/margin8"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/orange_dark"
            android:contentDescription="@string/confirm"
            android:src="@drawable/ic_baseline_person_add_24"/>

    </LinearLayout>

    </RelativeLayout>

</ScrollView>